First run through of typo corrections from Adam S #9

--- a/01-introduction.Rmd
+++ b/01-introduction.Rmd
@@ -105,7 +105,7 @@ This work [@howes2023spatio] was included in the UNAIDS (Joint United Nations Pr
 First, to allow for compatibility with Naomi, I implemented the integrated nested Laplace approximations using automatic differentiation, opening the door to a new class of fast, flexible, and accurate Bayesian inference algorithms.
 The implementation was using models for a clinical trial of an epilepsy drug, and for the prevalence of the parasitic worm Loa loa.
 Second, I developed an approximate Bayesian inference method combining adaptive Gauss-Hermite quadrature with principal components analysis.
-I applied these method to data from Malawi, and analysed the consequences of inference method choice for policy relevant outcomes.
+I applied these methods to data from Malawi, and analysed the consequences of the inference method choice for policy relevant outcomes.
 * Chapter \@ref(conclusions): Finally, I discuss contributions of the research, avenues for future work, and some broader reflections.
 
 Though chronological order is recommended, Chapters \@ref(beyond-borders), \@ref(multi-agyw) and \@ref(naomi-aghq) may be read in any order, or as stand-alone studies, if preferred.
