--- a/02-hiv-aids.Rmd
+++ b/02-hiv-aids.Rmd
@@ -114,7 +114,7 @@ These medical interventions are more costly than other prevention options, so ar
 
 Though implementation of the above interventions has enabled important progress to be made, there remains much more to do.
 In 2022, `r custom_numbers_to_words(infections2022)` people were newly infected with HIV and there were `r custom_numbers_to_words(deaths2022)` AIDS-related deaths, more than one death every minute [@unaids2022global].
-Bold fast-track targets have been set to accelerate the end of AIDS as global public health threat by 2030 [@assembly2016political].
+Bold fast-track targets have been set to accelerate the end of AIDS as a global public health threat by 2030 [@assembly2016political].
 To meet these targets in the context of disruption to HIV services caused by the COVID-19 pandemic and a potential shortfall in HIV funding, renewed commitments are required [@economist2023triple].
 
 <!-- Prioritisation of interventions  -->
@@ -132,7 +132,7 @@ knitr::include_graphics("figures/hiv-aids/naomi-continent.png")
 <!-- Uneven burden in space -->
 Disease burden varies substantially across multiple spatial scales.
 In some countries, the epidemic is concentrated in small populations, and national HIV prevalence is low.
-In others, the epidemic is sustained by heterosexual transmission, and national HIV prevalence is higher (typically >1%)
+In others, the epidemic is sustained by heterosexual transmission, and national HIV prevalence is higher (typically >1%).
 These two epidemic settings are sometimes described as concentrated and generalised, respectively.
 Most countries severely affected by HIV are in sub-Saharan Africa (SSA).
 It is estimated that `r round(ssa_plhiv2022 / plhiv2022 * 100)`% of the `r custom_numbers_to_words(plhiv2022)` PLHIV worldwide live in SSA.
@@ -173,7 +173,7 @@ Nonetheless, as a primary measure of population disease burden, HIV prevalence i
 
 * **HIV incidence** is the rate $\lambda > 0$ of new HIV infections.
 In writing, HIV incidence is often given as a number of new infections per 1000 person years.
-The number of new HIV infections that occur during a given time is the integral of the rate of HIV incidence multiplied by the size of the susceptible population.
+The number of new HIV infections that occur during a given time is the integral of the rate of HIV incidence over time $\lambda_t$ multiplied by the size of the susceptible population.
 Let $\rho_t$ be the HIV prevalence, and $N_t$ be the population size, at time $t$.
 Then the number of new HIV infections which occur during a given period of time are given by
 $$
@@ -208,7 +208,7 @@ Both DHS and PHIA surveys collecting demographic, behavioural, and clinical info
 Additionally, HIV testing is conducted via home-based testing, with results returned immediately, or anonymous dried blood spot testing.
 
 * **Programmatic data** refer to data routinely collected during delivery of health services.
-Examples include data from antenatal care (ANC) HIV testing and ART service delivery.
+Examples include data from antenatal care (ANC), HIV testing, and ART service delivery.
 Due to their integration with regular service delivery, programmatic data are available at higher frequency than other data sources.
 However, in comparison with designed studies, less control can be exercised over collection of programmatic data.
 It is common to encounter issues of data quality and reliability, as well as bias, in working with programmatic data.
@@ -282,7 +282,7 @@ Multiple data sources are used in Chapter \@ref(multi-agyw) to overcome the limi
 3. **Expert guidance**:
 Expert epidemiological, demographic, and local stakeholder guidance can be used to improve estimates.
 Ensuring the quality of any data used in the estimation process is essential.
-UNAIDS process.
+<!-- UNAIDS process. -->
 
 4. **Uncertainty quantification**:
 Conclusions drawn by synthesising multiple incomplete data sources are unlikely to be firm and unanimous.
