Update cover, and write Adam S thesis revisions response #9

--- a/corrections/corrections.Rmd
+++ b/corrections/corrections.Rmd
@@ -15,7 +15,17 @@ output:
 
 # Dr. Christopher Paciorek
 
-## Minor corrections {-}
+## General comments {-}
+
+> *1. Broader issue*
+
+1. I've fixed it!
+
+> *2. Broader issue*
+
+2. I've fixed it!
+
+## Minor comments {-}
 
 > *1. Spelling mistake*
 
@@ -24,40 +34,13 @@ output:
 > *2. Spelling mistake*
 
 2. I've fixed it!
-
-## Major corrections {-}
-
-> *3. Methods mistake*
-
-3. Hopefully I've fixed it!
-
-> *4. Methods mistake*
-
-4. Hopefully I've fixed it!
 
 \newpage
 
 # Dr. Adam Sykulski
 
-## Minor corrections {-}
-
-> *1. Spelling mistake*
-
-1. I've fixed it!
-
-> *2. Spelling mistake*
-
-2. I've fixed it!
-
-## Major corrections {-}
-
-> *3. Methods mistake*
-
-3. Hopefully I've fixed it!
-
-> *4. Methods mistake*
-
-4. Hopefully I've fixed it!
+Thank you for providing a paper copy of the thesis annotated with suggested typographical changes.
+I have made these changes, and additionally thoroughly proofread the thesis as requested.
 
 \newpage
 
