--- a/corrections/cover.Rmd
+++ b/corrections/cover.Rmd
@@ -21,8 +21,8 @@ Email: ath19@ic.ac.uk
 
 Dear Dr Paciorek and Dr Sykulski,
 
-Thank you for taking the time to read my thesis "Bayesian spatio-temporal methods for small-area estimation of HIV indicators".
-I attach my response to the corrections.
+Thank you for taking the time to read and examine my thesis "Bayesian spatio-temporal methods for small-area estimation of HIV indicators".
+I attach my response to the minor corrections you have suggested.
 
 With kind regards,
 
